src/Base/main/default/objects/Financing_Application__c/Financing_Application__c.object-meta.xml
<CustomObject>
    <label>Financing Application</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Financing Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financing Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>