src/Base/main/default/objects/Financing_Application__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of Applicant</description>
    <label>City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>