src/Base/main/default/objects/Financing_Application__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Date of Birth of Applicant</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>