src/Base/main/default/objects/Financing_Application__c/fields/Dream_Boat_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dream_Boat_Comments__c</fullName>
    <description>Applicant&apos;s Dream Boat - Additional Comments</description>
    <label>Dream Boat - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>