src/Base/main/default/objects/Financing_Application__c/fields/Dream_Boat_Condition__c.field-meta.xml
<CustomField>
    <fullName>Dream_Boat_Condition__c</fullName>
    <description>Applicant&apos;s Dream Boat - Condition</description>
    <label>Dream Boat - Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pre-Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>