src/Base/main/default/objects/Financing_Application__c/fields/Dream_Boat_Minimum_Price__c.field-meta.xml
<CustomField>
    <fullName>Dream_Boat_Minimum_Price__c</fullName>
    <description>Applicant&apos;s Dream Boat - Minimum Price</description>
    <label>Dream Boat - Minimum Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>