src/Base/main/default/objects/Financing_Application__c/fields/Dream_Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Dream_Boat_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicant&apos;s Dream Boat - Model</description>
    <label>Dream Boat - Model</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Financing Applications</relationshipLabel>
    <relationshipName>Financing_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>