src/Base/main/default/objects/Financing_Application__c/fields/Dream_Boat_Type__c.field-meta.xml
<CustomField>
    <fullName>Dream_Boat_Type__c</fullName>
    <description>Applicant&apos;s Dream Boat Type</description>
    <label>Dream Boat - Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family and Fishing Boats</fullName>
            </value>
            <value>
                <fullName>Pontoon Boats</fullName>
            </value>
            <value>
                <fullName>Deck Boats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>