src/Base/main/default/objects/Financing_Application__c/fields/EA_Email__c.field-meta.xml
<CustomField>
    <fullName>EA_Email__c</fullName>
    <description>Applicant&apos;s Additional Employment - Email Address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>