src/Base/main/default/objects/Financing_Application__c/fields/EA_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>EA_Employer_Name__c</fullName>
    <description>Applicant&apos;s Additional Employment - Employer Name</description>
    <label>Employer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>