src/Base/main/default/objects/Financing_Application__c/fields/EA_Employment_Duration__c.field-meta.xml
<CustomField>
    <fullName>EA_Employment_Duration__c</fullName>
    <description>Applicant&apos;s Additional Employment - Employment Duration</description>
    <label>Employment Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>4 years</fullName>
            </value>
            <value>
                <fullName>5+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>