src/Base/main/default/objects/Financing_Application__c/fields/EA_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>EA_Job_Title__c</fullName>
    <description>Applicant&apos;s Additional Employment - Job Title</description>
    <label>Job Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>