src/Base/main/default/objects/Financing_Application__c/fields/EA_Occupation__c.field-meta.xml
<CustomField>
    <fullName>EA_Occupation__c</fullName>
    <description>Applicant&apos;s Additional Employment - Occupation</description>
    <label>Occupation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>