src/Base/main/default/objects/Financing_Application__c/fields/EA_Phone__c.field-meta.xml
<CustomField>
    <fullName>EA_Phone__c</fullName>
    <description>Applicant&apos;s Additional Employment - Phone Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>