src/Base/main/default/objects/Financing_Application__c/fields/EA_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>EA_Postal_Code__c</fullName>
    <description>Applicant&apos;s Additional Employment - Postal Code</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>