src/Base/main/default/objects/Financing_Application__c/fields/EA_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>EA_Street_Address__c</fullName>
    <description>Applicant&apos;s Additional Employment - Street Address</description>
    <label>Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>