src/Base/main/default/objects/Financing_Application__c/fields/EC_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>EC_Additional_Information__c</fullName>
    <description>Applicant&apos;s Current Employment - Additional Information</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>