src/Base/main/default/objects/Financing_Application__c/fields/EC_Annual_Salary_or_Wages__c.field-meta.xml
<CustomField>
    <fullName>EC_Annual_Salary_or_Wages__c</fullName>
    <description>Applicant&apos;s Current Employment - Annual Salary or Wages</description>
    <label>Annual Salary or Wages</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>