src/Base/main/default/objects/Financing_Application__c/fields/EC_City__c.field-meta.xml
<CustomField>
    <fullName>EC_City__c</fullName>
    <description>Applicant&apos;s Current Employment - City</description>
    <label>City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>