src/Base/main/default/objects/Financing_Application__c/fields/EC_Email__c.field-meta.xml
<CustomField>
    <fullName>EC_Email__c</fullName>
    <description>Applicant&apos;s Current Employment - Email Address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>