src/Base/main/default/objects/Financing_Application__c/fields/EC_Occupation__c.field-meta.xml
<CustomField>
    <fullName>EC_Occupation__c</fullName>
    <description>Applicant&apos;s Current Employment - Occupation</description>
    <label>Occupation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>