src/Base/main/default/objects/Financing_Application__c/fields/EC_Permission_to_Contact_Employer__c.field-meta.xml
<CustomField>
    <fullName>EC_Permission_to_Contact_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant&apos;s Current Employment - Permission to Contact Employer</description>
    <label>Permission to Contact Employer</label>
    <type>Checkbox</type>
</CustomField>