src/Base/main/default/objects/Financing_Application__c/fields/EC_Phone__c.field-meta.xml
<CustomField>
    <fullName>EC_Phone__c</fullName>
    <description>Current Employment - Phone Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>