src/Base/main/default/objects/Financing_Application__c/fields/EC_Province__c.field-meta.xml
<CustomField>
    <fullName>EC_Province__c</fullName>
    <description>Applicant&apos;s Current Employment - Province</description>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
            </value>
            <value>
                <fullName>Newfoundland and Labrador</fullName>
            </value>
            <value>
                <fullName>Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>