src/Base/main/default/objects/Financing_Application__c/fields/EC_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>EC_Street_Address__c</fullName>
    <description>Applicant&apos;s Current Employment - Street Address</description>
    <label>Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>