src/Base/main/default/objects/Financing_Application__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Address of Applicant</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>