src/Base/main/default/objects/Financing_Application__c/fields/Emp_Direction__c.field-meta.xml
<CustomField>
    <fullName>Emp_Direction__c</fullName>
    <label>Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>