src/Base/main/default/objects/Financing_Application__c/fields/Emp_Months__c.field-meta.xml
<CustomField>
    <fullName>Emp_Months__c</fullName>
    <label>Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>