src/Base/main/default/objects/Financing_Application__c/fields/Emp_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Emp_Occupation__c</fullName>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>