src/Base/main/default/objects/Financing_Application__c/fields/Emp_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Emp_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>