src/Base/main/default/objects/Financing_Application__c/fields/Emp_Province__c.field-meta.xml
<CustomField>
    <fullName>Emp_Province__c</fullName>
    <label>Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>