src/Base/main/default/objects/Financing_Application__c/fields/Emp_Status__c.field-meta.xml
<CustomField>
    <fullName>Emp_Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>