src/Base/main/default/objects/Financing_Application__c/fields/Emp_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Emp_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>