src/Base/main/default/objects/Financing_Application__c/fields/Emp_Years__c.field-meta.xml
<CustomField>
    <fullName>Emp_Years__c</fullName>
    <label>Duration (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>