src/Base/main/default/objects/Financing_Application__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name of Applicant</description>
    <label>First Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>