src/Base/main/default/objects/Financing_Application__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Home Phone Number of Applicant</description>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>