src/Base/main/default/objects/Financing_Application__c/fields/JA_City__c.field-meta.xml
<CustomField>
    <fullName>JA_City__c</fullName>
    <description>City of Joint Applicant (if applicable)</description>
    <label>City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>