src/Base/main/default/objects/Financing_Application__c/fields/JA_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>JA_Date_of_Birth__c</fullName>
    <description>Date of birth of the Joint Applicant (if applicable)</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>