src/Base/main/default/objects/Financing_Application__c/fields/JA_Email__c.field-meta.xml
<CustomField>
    <fullName>JA_Email__c</fullName>
    <description>Email address of Joint Applicant (if applicable)</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>