src/Base/main/default/objects/Financing_Application__c/fields/JA_First_Name__c.field-meta.xml
<CustomField>
    <fullName>JA_First_Name__c</fullName>
    <description>First Name of Joint Applicant (if applicable)</description>
    <label>First Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>