src/Base/main/default/objects/Financing_Application__c/fields/JA_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>JA_Home_Phone__c</fullName>
    <description>Home phone number of the Joint Applicant (if applicable)</description>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>