src/Base/main/default/objects/Financing_Application__c/fields/JA_How_Long_at_Residence__c.field-meta.xml
<CustomField>
    <fullName>JA_How_Long_at_Residence__c</fullName>
    <description>How long the Joint Applicant has lived at their current residence (if applicable)</description>
    <label>How Long at Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>4 years</fullName>
            </value>
            <value>
                <fullName>5+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>