src/Base/main/default/objects/Financing_Application__c/fields/JA_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>JA_Last_Name__c</fullName>
    <description>Last Name of Joint Applicant (if applicable)</description>
    <label>Last Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>