src/Base/main/default/objects/Financing_Application__c/fields/JA_Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>JA_Mortgage_Balance__c</fullName>
    <description>The balance remaining on the Joint Applicant&apos;s mortgage (if applicable)</description>
    <label>Mortgage Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>