src/Base/main/default/objects/Financing_Application__c/fields/JA_Mortgage_Owner__c.field-meta.xml
<CustomField>
    <fullName>JA_Mortgage_Owner__c</fullName>
    <description>Owner of the Joint Applicant&apos;s Mortgage (if applicable)</description>
    <label>Mortgage Owner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>