src/Base/main/default/objects/Financing_Application__c/fields/JA_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>JA_Postal_Code__c</fullName>
    <description>Postal Code of Joint Applicant (if applicable)</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>