src/Base/main/default/objects/Financing_Application__c/fields/JA_Rent_or_Mortgage_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>JA_Rent_or_Mortgage_Monthly_Amount__c</fullName>
    <description>Monthly Rent or Mortgage amount of the Joint Applicant (if applicable)</description>
    <label>Rent or Mortgage Monthly Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>