src/Base/main/default/objects/Financing_Application__c/fields/JA_Rent_or_Own_Home__c.field-meta.xml
<CustomField>
    <fullName>JA_Rent_or_Own_Home__c</fullName>
    <description>Does the Joint Applicant Own or Rent their home (if applicable)</description>
    <label>Rent or Own Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>