src/Base/main/default/objects/Financing_Application__c/fields/JA_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>JA_Street_Address__c</fullName>
    <description>Street address of Joint Applicant (if applicable)</description>
    <label>Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>