src/Base/main/default/objects/Financing_Application__c/fields/JA_Value_of_Home__c.field-meta.xml
<CustomField>
    <fullName>JA_Value_of_Home__c</fullName>
    <description>Value of the Joint Applicant&apos;s home (if applicable)</description>
    <label>Value of Home</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>