src/Base/main/default/objects/Financing_Application__c/fields/JA_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>JA_Work_Phone__c</fullName>
    <description>Phone Number of Joint Applicant (if applicable)</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>