src/Base/main/default/objects/Financing_Application__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name of Applicant</description>
    <label>Last Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>