src/Base/main/default/objects/Financing_Application__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Financing Applications</relationshipLabel>
    <relationshipName>Financing_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>