src/Base/main/default/objects/Financing_Application__c/fields/Mortgage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Amount__c</fullName>
    <label>Mortgage_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>