src/Base/main/default/objects/Financing_Application__c/fields/Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Balance__c</fullName>
    <description>The balance remaining on the Applicant&apos;s Mortgage</description>
    <label>Mortgage Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>