src/Base/main/default/objects/Financing_Application__c/fields/Mortgage_Holder__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Holder__c</fullName>
    <label>Mortgage_Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>