src/Base/main/default/objects/Financing_Application__c/fields/Mortgage_Owner__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Owner__c</fullName>
    <description>The Bank that Owns the Applicant&apos;s Mortgage</description>
    <label>Mortgage Owner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>