src/Base/main/default/objects/Financing_Application__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal Code of Applicant</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>