src/Base/main/default/objects/Financing_Application__c/fields/Primary_Bank__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bank__c</fullName>
    <description>Primary Bank used by the Applicant</description>
    <label>Primary Bank</label>
    <length>150</length>
    <type>Text</type>
</CustomField>