src/Base/main/default/objects/Financing_Application__c/fields/Primary_Bank_Usage__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bank_Usage__c</fullName>
    <label>Primary Bank - Usage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>