src/Base/main/default/objects/Financing_Application__c/fields/Rent_or_Mortgage_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_or_Mortgage_Monthly_Amount__c</fullName>
    <description>What is the Monthly Amount of the Applicants Rent or Mortgage</description>
    <label>Rent or Mortgage Monthly Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>