src/Base/main/default/objects/Financing_Application__c/fields/Send_me_a_Copy__c.field-meta.xml
<CustomField>
    <fullName>Send_me_a_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for whether or not the Applicant wants a copy of their application emailed to them.</description>
    <label>Send me a Copy</label>
    <type>Checkbox</type>
</CustomField>