src/Base/main/default/objects/Financing_Application__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Street Address of Applicant</description>
    <label>Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>