src/Base/main/default/objects/Financing_Application__c/fields/Value_of_Home__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Home__c</fullName>
    <description>Value of the Applicant&apos;s Home</description>
    <label>Value of Home</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>