src/Base/main/default/objects/Financing_Application__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Work Phone Number of Applicant</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>